--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "js-test",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
     "build": "npx tsc"
   },
